# Face-Recognized-Attendance

./: .gitignore  README.md  attendance_manager.py  main.py  pyproject.toml  requirements.txt
LAFS/: Mobilenet.py  PartfVit.py  face_engine.py  utils.py
WebApp/: app.py
static/: index.html  style.css
