[project]
name = "Face-Recognized-Attendance"
version = "0.1.0"
description = "Face-Recognized-Attendance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "face-alignment>=1.4.1",
    "facenet-pytorch>=2.5.3",
    "matplotlib>=3.10.8",
    "mtcnn>=1.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "scikit-image>=0.25.2",
    "tensorflow>=2.20.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
]