[project]
name = "Face-Recognized-Attendance"
version = "0.2.0"
description = "Face-Recognized-Attendance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "facenet-pytorch>=2.5.3",
    "mtcnn>=1.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.42.0",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.22",
    "torchvision>=0.25.0",
]
